--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,8 @@
 version: 1.0.{build}
 image: Visual Studio 2017
-build:
-  verbosity: minimal
+build_script:
+- cmd: >-
+    dotnet restore
+    dotnet build
+test_script:
+- cmd: dotnet test tests/**/*.Tests.csproj
