--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,7 @@
 version: 1.0.{build}
 image: Visual Studio 2017
 build_script:
-- cmd: >-
-    dotnet restore
-    dotnet build
+- cmd: dotnet restore
+- cmd: dotnet build
 test_script:
 - cmd: dotnet test tests/**/*.Tests.csproj
