--- a/src/JarrodDavis.GitFlowVersion.Core/JarrodDavis.GitFlowVersion.Core.csproj
+++ b/src/JarrodDavis.GitFlowVersion.Core/JarrodDavis.GitFlowVersion.Core.csproj
@@ -1,7 +1,11 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NuGet.Versioning" Version="4.2.0"/>
+  </ItemGroup>
 </Project>
