--- a/tests/JarrodDavis.GitFlowVersion.Core.Tests/JarrodDavis.GitFlowVersion.Core.Tests.csproj
+++ b/tests/JarrodDavis.GitFlowVersion.Core.Tests/JarrodDavis.GitFlowVersion.Core.Tests.csproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
@@ -8,6 +9,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+    <PackageReference Include="Xunit.Combinatorial" Version="1.2.7" />
+    <PackageReference Include="FluentAssertions" Version="4.19.3" />
   </ItemGroup>
 
   <ItemGroup>
