Add Branch Category Mapping Options
- Add settings JSON with the branch name options for the various
  git-flow branch types
- Use Microsoft's Options, Configuration, and Dependency Injection
  frameworks to set up the mapper and its tests with those options as a
  strongly-typed class

--- a/src/JarrodDavis.GitFlowVersion.Core/JarrodDavis.GitFlowVersion.Core.csproj
+++ b/src/JarrodDavis.GitFlowVersion.Core/JarrodDavis.GitFlowVersion.Core.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NuGet.Versioning" Version="4.2.0"/>
+    <PackageReference Include="NuGet.Versioning" Version="4.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.2" />
   </ItemGroup>
 </Project>
