--- a/src/JarrodDavis.GitFlowVersion.Core/JarrodDavis.GitFlowVersion.Core.csproj
+++ b/src/JarrodDavis.GitFlowVersion.Core/JarrodDavis.GitFlowVersion.Core.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <PackageReference Include="NuGet.Versioning" Version="4.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.2" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.1" />
   </ItemGroup>
 </Project>
