--- a/tests/JarrodDavis.GitFlowVersion.Core.Tests/JarrodDavis.GitFlowVersion.Core.Tests.csproj
+++ b/tests/JarrodDavis.GitFlowVersion.Core.Tests/JarrodDavis.GitFlowVersion.Core.Tests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.1" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
