--- a/tests/JarrodDavis.GitFlowVersion.Core.Tests/JarrodDavis.GitFlowVersion.Core.Tests.csproj
+++ b/tests/JarrodDavis.GitFlowVersion.Core.Tests/JarrodDavis.GitFlowVersion.Core.Tests.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.2" />
+    <PackageReference Include="Moq" Version="4.7.99" />
     <PackageReference Include="System.ValueTuple" Version="4.3.1" />
   </ItemGroup>
 
