--- a/src/JarrodDavis.GitFlowVersion.Core/JarrodDavis.GitFlowVersion.Core.csproj
+++ b/src/JarrodDavis.GitFlowVersion.Core/JarrodDavis.GitFlowVersion.Core.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.2" />
     <PackageReference Include="NuGet.Versioning" Version="4.2.0" />
     <PackageReference Include="System.ValueTuple" Version="4.3.1" />
