--- a/tests/JarrodDavis.Extensions.Logging.Xunit/JarrodDavis.Extensions.Logging.Xunit.csproj
+++ b/tests/JarrodDavis.Extensions.Logging.Xunit/JarrodDavis.Extensions.Logging.Xunit.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.2" />
+    <PackageReference Include="System.Threading" Version="4.3.0" />
+    <PackageReference Include="xunit.abstractions" Version="2.0.1" />
+  </ItemGroup>
+
 </Project>
